<resources>
    <string name="app_name">Wordle</string>
    <string name="guess_1">Guess #1</string>
    <string name="guess_1_check">Guess #1 Check</string>
    <string name="guess_2">Guess #2</string>
    <string name="guess_2_check">Guess #2 Check</string>
    <string name="guess_3">Guess #3</string>
    <string name="guess_3_check">Guess #3 Check</string>
    <string name="button">GUESS!</string>
    <string name="Submit_button">GUESS!</string>
    <string name="submit_button">Submit</string>
    <string name="reset_button">reset</string>
</resources>